# rossum_testday

./: .dockerignore  .env_default  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  main.py  test_sam_transform.py
tests/: conftest.py  export-6394865.json  export-full-6394865.json  make_invoices_xml_input.json  make_invoices_xml_output.xml  test_convert_to_xml.py  test_normalize_document.py
